--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,6 +51,10 @@ p {
   line-height: 1.7em;
 }
 
+p.cthulu{
+ margin-top: 30px;
+}
+
 /* header */
 
 #logo {
@@ -69,6 +73,8 @@ p {
     text-decoration: none;
   }
 }
+
+/* footer */
 
 footer {
   margin-top: 45px;
