--- a/app/views/static_pages/_home_signed_in.html.erb
+++ b/app/views/static_pages/_home_signed_in.html.erb
@@ -7,4 +7,8 @@
       <%= render 'shared/micropost_form' %>
     </section>
   </aside>
+  <div class="span8">
+    <h3>Your Feed</h3>
+    <%= render 'shared/feed' %>
+  </div>
 </div>
