Add placeholder content. Change default pagination to 10 for User, Micropost, and Relationship.

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, 'About Us') %>
+<% provide(:title, 'About') %>
 
-<h1>About Us</h1>
+<h1>About</h1>
 <p>
-  This is the about us page.
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse imperdiet, quam eget aliquam pretium, nisi tellus convallis neque, et ornare mauris nulla sit amet libero. Nunc tortor mauris, condimentum vel tincidunt at, ullamcorper eu diam. Maecenas ultricies arcu et nisi consectetur sit amet pretium ligula interdum. Sed posuere vulputate metus non scelerisque. Mauris ac mauris est. Maecenas cursus aliquam imperdiet. Suspendisse potenti. In ut diam sapien. Nulla bibendum convallis massa volutpat scelerisque. Morbi mattis posuere turpis, id condimentum dolor dictum a. Duis porttitor, lorem at pretium consectetur, quam elit dapibus tortor, ac molestie lacus dolor nec sem. Quisque quis orci quam. Sed tincidunt, diam at egestas posuere, nibh lectus fringilla ante, feugiat placerat ligula justo id dui. Aliquam ut accumsan enim. Maecenas pulvinar, tellus sit amet varius mattis, sapien nisi malesuada dui, sed placerat lacus odio id mauris. Pellentesque aliquam dignissim sem volutpat pharetra.
 </p>
