--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,5 +2,5 @@
 
 <h1>Contact</h1>
 <p>
-  This is the contact page.
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis elementum vulputate sodales. Mauris eleifend arcu eu mi congue ac congue lectus ultricies. Ut egestas diam ac dui pretium mollis. Integer sagittis posuere lacus, vitae sodales leo porttitor vitae. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed suscipit iaculis lacus, non laoreet urna congue vitae. Quisque lobortis, libero sit amet rhoncus dictum, mauris est tincidunt justo, quis gravida orci eros at tortor. Sed dapibus facilisis urna eu tempor. In hac habitasse platea dictumst. Nam tellus urna, blandit eget interdum vel, fringilla quis odio. Proin cursus diam a sapien porta a cursus augue consequat. Nam euismod pretium urna. Praesent turpis nulla, euismod et placerat in, congue ac nibh.
 </p>
