--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,5 +2,5 @@
 
 <h1>Help</h1>
 <p>
-  This is the help page.
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur venenatis quam at diam scelerisque rutrum. Pellentesque posuere felis ac turpis commodo sed mattis erat volutpat. Pellentesque massa turpis, auctor quis vulputate id, egestas et ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In arcu est, bibendum quis fringilla vitae, vehicula id magna. Curabitur eu felis vitae arcu semper varius. Aenean nisi erat, dictum vel dapibus eu, sagittis vel risus. Etiam convallis consectetur nibh in scelerisque. In velit nisi, scelerisque ut sollicitudin et, fermentum fringilla tortor. Donec suscipit sollicitudin arcu, quis fermentum lectus accumsan vitae. Donec sed tincidunt mi. Etiam tempor gravida mauris nec consequat. Sed neque nisl, dictum sit amet tincidunt non, gravida sagittis tellus. Sed sed risus vel ligula lacinia pellentesque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec bibendum vehicula felis, et convallis augue auctor in.
 </p>
