--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -24,7 +24,7 @@
         <ul class="users">
           <%= render @users %>
         </ul>
-        <%= will_paginate %>
+        <%= will_paginate page_links: false %>
     <% end %>
   </div>
 </div>
