--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,12 @@
 <footer class="footer">
   <small>
-    Read
-    <a href="http://railstutorial.org/">this</a>
-    shit.
+    Source is
+    <a href="https://github.com/marcdel/not-twitter">here</a>.
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",   about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://www.alternet.org/">News</a></li>
+      <li><%= link_to 'About',   about_path %></li>
+      <li><%= link_to 'Contact', contact_path %></li>
     </ul>
   </nav>
 </footer>
