--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
         <ol class="microposts">
           <%= render @microposts %>
         </ol>
-        <%= will_paginate @microposts %>
+        <%= will_paginate @microposts, page_links: false %>
     <% end %>
   </div>
 </div>
